# matrix-python

./: LICENSE  README  pyproject.toml  run
matrix/: __main__.py  codes.py
